--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Hello Primers!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm server/server.js"
   },
   "author": "Myron Schippers",
   "license": "ISC",
