--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
-    "pg": "^7.10.0"
+    "pg": "^7.10.0",
+    "url": "^0.11.0"
   }
 }
